--- a/samples/using/bin/index.html
+++ b/samples/using/bin/index.html
@@ -3,12 +3,15 @@
     <head>
         
 	</head>
-	<body >
-		<div class="toto">a</div>
-		<div class="toto">b</div>
-		<div class="toto">c</div>
+	<body>
+		<div class="toto">rien</div>
+		<div class="toto">none</div>
+		<div class="toto">porte-nin-ouak</div>
 		
-		
+		<div id="appliEmbedCtnr">
+			
+		</div>
+		<div class="title"></div>
 		<!-- test Haxe-->
 			<div id="haxe:trace"></div>	
 		<!-- -->
